[gd_scene load_steps=17 format=3 uid="uid://dqu3d3hbn70to"]

[ext_resource type="Script" path="res://scene/loading_screen/loading_screen.gd" id="1_ak0i6"]
[ext_resource type="Texture2D" uid="uid://3bqtndhxbppy" path="res://Areas/GameTutorial/Tutorial_Item/gambar.jpg" id="1_keu5t"]
[ext_resource type="Texture2D" uid="uid://csf53dnfncelm" path="res://scene/UI/menu/font/text-1710175318481.png" id="3_yftcg"]
[ext_resource type="Texture2D" uid="uid://drw63nhd61m4l" path="res://Character/Tanaman/Alang-Alang/alang txt.png" id="4_87htg"]
[ext_resource type="PackedScene" uid="uid://dgaunqj7nm4j4" path="res://Character/Tanaman/Alang-Alang/alang_alang.tscn" id="5_17vg4"]
[ext_resource type="Texture2D" uid="uid://usj12h2fywta" path="res://Areas/GameTutorial/environtmen_scene/text-1716860562400.png" id="6_0ri8t"]
[ext_resource type="Texture2D" uid="uid://cfjlw7fy8ur4p" path="res://scene/loading_screen/Penyiram Air.png" id="8_a48kg"]
[ext_resource type="Texture2D" uid="uid://cugq7tuqnjfx4" path="res://scene/loading_screen/AirLoadingScreenEMPTY.png" id="9_ucmtm"]
[ext_resource type="PackedScene" uid="uid://bjxhj32neycau" path="res://Character/Player/player.tscn" id="10_dq2cd"]
[ext_resource type="Texture2D" uid="uid://b83l3tga7ieph" path="res://scene/loading_screen/AirLoadingScreenFILL.png" id="10_hjvi4"]
[ext_resource type="PackedScene" uid="uid://bofr4d4kvf2w6" path="res://Character/Player/joystik/script/joystick.tscn" id="11_awfuu"]

[sub_resource type="Animation" id="Animation_3yrqh"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(576, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(259, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.659712]
}

[sub_resource type="Animation" id="Animation_auwco"]
resource_name = "new_animation"
length = 3.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(576, -0.25, 0, 0.25, 0, 576, -0.25, 0, 0.25, 0, 576, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5, 3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(259, -0.25, 0, 0.25, 0, 246.465, -0.25, 0, 0.25, 0, 259, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5, 3)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.659712, -0.738274, -0.659712]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_67mkm"]
_data = {
"RESET": SubResource("Animation_3yrqh"),
"new_animation": SubResource("Animation_auwco")
}

[sub_resource type="Gradient" id="Gradient_dg3r0"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1u5qx"]
gradient = SubResource("Gradient_dg3r0")
fill_from = Vector2(1, 0.0299145)

[node name="Loading_Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ak0i6")

[node name="ColorRect" type="Sprite2D" parent="."]
position = Vector2(318, 189)
scale = Vector2(3.64338, 2.0494)
texture = ExtResource("1_keu5t")

[node name="guardian_forest" type="Node2D" parent="."]
position = Vector2(164, 69)

[node name="Text-1710175318481" type="Sprite2D" parent="guardian_forest"]
position = Vector2(-26, -3)
texture = ExtResource("3_yftcg")

[node name="Node" type="Node2D" parent="."]
position = Vector2(-62, -59)

[node name="alangAlang1" parent="Node" instance=ExtResource("5_17vg4")]
position = Vector2(251, 297)
scale = Vector2(2.2, 2.2)

[node name="alangAlang2" parent="Node" instance=ExtResource("5_17vg4")]
position = Vector2(183, 312)
rotation = -0.201317
scale = Vector2(2.2, 2.2)

[node name="alangAlang3" parent="Node" instance=ExtResource("5_17vg4")]
position = Vector2(248, 331)
rotation = 0.0831349
scale = Vector2(2.2, 2.2)

[node name="Text-1716860562400" type="Sprite2D" parent="."]
texture_filter = 2
position = Vector2(155, 312)
scale = Vector2(0.27673, 0.27673)
texture = ExtResource("6_0ri8t")

[node name="AlangTxt" type="Sprite2D" parent="."]
texture_filter = 2
position = Vector2(165, 271)
scale = Vector2(0.841667, 0.841667)
texture = ExtResource("4_87htg")

[node name="PenyiramAir" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(576, 259)
rotation = -0.659712
texture = ExtResource("8_a48kg")

[node name="PenyiramLoading" type="AnimationPlayer" parent="PenyiramAir"]
libraries = {
"": SubResource("AnimationLibrary_67mkm")
}

[node name="LoadingBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 269.0
offset_right = 552.0
offset_bottom = 318.0
fill_mode = 1
texture_under = ExtResource("9_ucmtm")
texture_progress = ExtResource("10_hjvi4")

[node name="warnaKosong" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(325, 75)
rotation = 3.14159
scale = Vector2(12.1801, -10.5167)

[node name="warnaNormal" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(325, 75)
rotation = 3.14159
scale = Vector2(12.1801, -10.5167)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(325, 75)
scale = Vector2(-12.1801, 10.5167)
texture = SubResource("GradientTexture2D_1u5qx")

[node name="Player" parent="." instance=ExtResource("10_dq2cd")]
visible = false

[node name="UI" type="CanvasLayer" parent="."]
visible = false

[node name="joystick" parent="UI" instance=ExtResource("11_awfuu")]
position = Vector2(63, 283)
scale = Vector2(1, 1)
